건축 글과 영상

--- a/todo-list/main.html
+++ b/todo-list/main.html
@@ -18,6 +18,7 @@
         <p>긴 문장을 쓸 때</p>
         <p>긴 <span style="color:red" >문장</span>을 쓸 때</p>
         <p>span 테그는 다른 스타일에 영향을 안주고 바꾸고 싶은 것만, 문장 중간에 단어만 바꿀 때</p>
+        <p>누군가에게 무언가 살명할 때, 글과 영상이 있다면 글로 갈수록 듣는 사람의 배우고자하는 의지가 커야 전달이 된다. 중요한 핵심 내용만을 효과적으로 전달하고자 한다면 영상이 편하다. 영상편집기술이 있다면 대중들에게 효과적으로 건축을 홍보할 수 있다.</p>
         <ul>
             <li>1</li>
             <li>2</li>
